--- a/src/css/main.css
+++ b/src/css/main.css
@@ -124,3 +124,10 @@
     margin-top:5%;
     
 }
+
+.DekanTemmiBermek{
+     margin: 10%;
+     border-radius: 10px;
+     padding: 10%;
+     background-color: rgb(178, 246, 248);
+}
